<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="#fff"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:id="@+id/price_txt"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/price"
            android:text="@string/_450_00"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#fff"
            />

        <TextView
            android:id="@+id/name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer_name"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:gravity="center"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:id="@+id/hair_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shave_hair"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/beard_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shave_beard"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="16sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        >

        <TextView
            android:id="@+id/pigment_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hair_pigment"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/musk_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/face_musk"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="16sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/time_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_00_00"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/date_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_00_00_0000"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="16sp"
            />

    </LinearLayout>

</LinearLayout>