<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookingActivity"
    android:orientation="vertical"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/back"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:textColorHint="#000"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="#fff"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textSize="20sp"
                android:textColor="#000"
                android:hint="@string/name"
                />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/shave_hair_chk"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/shave_hair"
            android:textColor="#fff"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <CheckBox
            android:id="@+id/shave_beard_chk"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/shave_a_beard"
            android:textColor="#fff"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <CheckBox
            android:id="@+id/hair_pigment_chk"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/hair_pigment"
            android:textColor="#fff"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <CheckBox
            android:id="@+id/face_musk_chk"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/face_musk"
            android:textColor="#fff"
            android:textSize="18sp"
            android:paddingLeft="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            >

            <Button
                android:id="@+id/set_time_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/set_time"
                android:background="@drawable/sign_up_btn"
                android:layout_marginRight="20dp"
                tools:ignore="ButtonStyle,NestedWeights,RtlHardcoded" />

            <Button
                android:id="@+id/set_date_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/set_date"
                android:background="@drawable/sign_up_btn"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            >

            <TextView
                android:id="@+id/time_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:hint="@string/_00_00"
                android:background="#fff"
                tools:ignore="NestedWeights,RtlHardcoded" />

            <TextView
                android:id="@+id/date_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20sp"
                android:hint="@string/_00_00_0000"
                android:background="#fff"
                />

        </LinearLayout>

        <Button
            android:id="@+id/book_now_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/sign_up_btn"
            android:text="@string/book_now"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>

</RelativeLayout>