<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/back"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background"
        />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/title"
            android:padding="20dp"
            android:contentDescription="@string/background_title"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:textColorHint="#000"
            android:layout_marginBottom="20dp"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_field_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:textColor="#000"
                android:hint="@string/email"
                android:background="#fff"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#000"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:textColorHint="#000"
            android:layout_marginBottom="40dp"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/password_field_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textColor="#000"
                android:background="#fff"

                />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="80dp"
            >

            <Button
                android:id="@+id/sign_in_btn2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:text="@string/sign_in"
                android:background="@drawable/sign_in_btn"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/send_verification_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:text="@string/send_verify_email"
                android:background="@drawable/sign_in_btn"
                android:layout_marginRight="20dp"
                tools:ignore="ButtonStyle,RtlHardcoded" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>